# beppy

./: .gitignore  .python-version  MJDATA.TXT  MUJOCO_LOG.TXT  README.md  X_clean.npy  X_invalid.npy  Y_clean.npy  bep.py  boundary.npy  eoms.pkl  forcegen.py  forcetest.py  hoeken_start.npy  main.py  pyproject.toml  rbm.py  trigrid.py
src/: approximation.py  bep.py  dyn.py  dyn2.py  forcegen.py  forces2.py  hoeken_start.npy  jactest.py  main.py  matrices.py  min.py  multipolyfit.py  prbdm.py  prbdm2.py  rbdm.py  rbm.py  rbm3.py  rbm4.py  sim.py  sim2.py  sim3.py  sim4.py  sim5.py  simple_spring.py  single_link.py  sym.py  test.py  trigrid.py  what.py  what2.py
src/junk/: bep.py  forces1.py  forces2.py  main.py  polyfit.py
src/old/: cv.py  fem.py  rbm2.py  sample.py  sample2.py  sim.py  trigrid.py
src/prbdm/: flexure.py  math.py  rbdm.py  sim.py  types.py
src/prbm2/: __init__.py  compile.py  model.py  physics.py  solver.py  types.py
