[project]
name = "beppy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.9",
    "gpytorch>=1.15.2",
    "jax>=0.10.0",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "optype>=0.17.0",
    "plotly>=6.7.0",
    "pydoe3>=1.6.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "scipy-stubs>=1.17.1.4",
    "tqdm>=4.67.3",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/.*",
    ".venv",
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]

defineConstant = { DEBUG = true }

