[project]
name = "beppy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "optype>=0.17.0",
    "plotly>=6.7.0",
    "pydoe3>=1.6.2",
    "scipy>=1.17.1",
    "scipy-stubs>=1.17.1.4",
    "tqdm>=4.67.3",
    "meshcat>=0.3.2,<0.4",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/.*",
    ".venv",
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]

defineConstant = { DEBUG = true }
[tool.pixi.workspace]
channels = ["conda-forge", "projectchrono"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
beppy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pychrono = ">=10.0.0,<11"
pixi-pycharm = "*"
numpy = "*"
pillow = ">=12.2.0,<13"
eigen = ">=5.0.1,<6"
ninja = ">=1.13.2,<2"
swig = ">=4.4.1,<5"
